Azure_Kubernetes/3-tier_AKS/DeleteTaskTodoMicroservice/manifests/azurerm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-task
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: delete-task
  template:
    metadata:
      labels:
        app: delete-task
    spec:
      containers:
      - name: delete-task
        image: imdevacr89.azurecr.io/backend-deletetask:v1
        ports:
        - containerPort: 8000
