Azure_Kubernetes/3-tier_AKS/DeleteTaskTodoMicroservice/manifests/azurerm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delete-task-ingress
  # annotations:
  #   kubernetes.io/ingress.class: addon-http-application-routing
spec:
  ingressClassName: nginx
  rules:
  - host: delete.inframellow.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: delete-task
            port: 
              number: 80
